# ChirikSIP

./: .containerignore  .gitignore  .rpmignore  AGENTS.md  BUILD-STATUS.md  CHANGELOG.md  CMakeLists.txt  CROSS-COMPILE.md  Containerfile.debbuild  Containerfile.rpmbuild  Dockerfile.mingw  LICENSE  README.md  build-deb.sh  build-flatpak.sh  build-rpm.sh  build-windows.sh  com.github.chirik.ChirikSIP.metainfo.xml  com.github.chirik.ChirikSIP.yml  docker-build.sh  resources.qrc
.github/: FUNDING.yml
.github/workflows/: build-deb.yml  build-flatpak.yml  build-linux.yml  build-rpm.yml  build-windows.yml
.mimocode/plans/: 1782649860743-proud-canyon.md  1782654217992-tidy-knight.md
build-win32/: CMakeCache.txt
debian/: changelog  control  copyright  rules
docs/compose/plans/: 2026-07-01-port-settings.md  2026-07-03-qtmultimedia-device-selection.md
docs/compose/specs/: 2026-07-03-qtmultimedia-device-selection-design.md
packaging/: chiriksip.spec
resources/: chiriksip.desktop
screenshots/: README.md
src/: audiobridge.cpp  audiobridge.h  audiodevicemanager.cpp  audiodevicemanager.h  callmanager.cpp  callmanager.h  callnotification.cpp  callnotification.h  main.cpp  mainwindow.cpp  mainwindow.h  portaudio_manager.h  ringtone.cpp  ringtone.h  scrollhelper.cpp  scrollhelper.h  settingsdialog.cpp  settingsdialog.h  setupwizard.cpp  setupwizard.h  sipclient.cpp  sipclient.h
tests/: test_parsing.cpp
toolchains/: mingw32.cmake  mingw64.cmake
windows/: chiriksip.rc
